# bfjit

./: CMakeLists.txt  README.md
example/: cat.bf  fib.bf  hello.bf
include/bfjit/checks/: verification.hpp
include/bfjit/codegen/: codegen.hpp  instruction_generation_context.hpp  single_module_context.hpp
include/bfjit/io/: file_chunk_iter.hpp  flat_iter.hpp
include/bfjit/jit/: jit.hpp
include/bfjit/nodes/: location.hpp  nodes.hpp
include/bfjit/optimizer/: optimizer.hpp
include/bfjit/parser/: parser.hpp
include/bfjit/util/: cmdline.hpp  macros.hpp  scope_guard.hpp  terminate.hpp
src/: main.cpp
src/bfjit/checks/: verification.cpp
src/bfjit/codegen/: codegen.cpp  single_module_context.cpp
src/bfjit/jit/: jit.cpp
src/bfjit/nodes/: nodes.cpp
src/bfjit/optimizer/: optimizer.cpp
src/bfjit/util/: cmdline.cpp
